Improve async & layout
Changes:
- implement global task progress handling
- implement tasks button/popup in window header
- implement Inspector feature: inspect window/node
- implement Inspector tree items with observable children (Window, Node) to reflect changes
- implement Inspector to show all windows (app window, popup, tooltip, stage)
- implement FunctionViewer plot() animation
- implement FunctionViewer zoom in/out & move
- implement FunctionViewer configurable plot range
- implement FunctionViewer coordinates display
- fix Inspector node selection style overriding font style
- fix FunctionViewer not displaying initial function
- fix Configurator not displaying config fields sometimes
- fix Search not closing sometimes when action is invoked
- fix ConfigField creation for ordinary Configs of type ObservableList
- fix Config of bound javaFxProperty being editable
- fix unable to link Inputs/Outputs in layout mode
- fix Fut.thenWait() forgetting value
- fix Fut.onDone/Ok/Error returning Unit
- fix P.div/times/plus computing wrong value
- fix onEventUp/Down methods unsubscribe not working
- fix AppLauncher.init() throwing exception
- fix AppLauncher unable to resize in OverlayPane (CTRL+P)
- fix setting TableInfo.textFactory value not refreshing text
- fix Subscribed.isSubscribed returning wrong value sometimes
- improve attach/sync unsubscribe with 'on disposer'
- improve ListView/TreeView/TableView/TreeTableView fixedRowHeight - use only css
- improve APP.kt config names
- improve AppSearchPlugin & DirSearchPlugin to be non blocking & show progress
- improve Async.runOn methods to return Fut
- improve Subscribed/Disposer interoperability with () -> Unit and Subscription
- improve App.configuration to be Configurable
- improve project.gradle.kts by using util methods
- create JavaLegacy.java for inaccessible module dependencies
- create TypeAliases.kt for global aliases
- create Collection.setTo method family and deprecate ObservableList.setAll()
- create type 